# lofi.nvim

./: .gitignore  CLAUDE.md  README.md
daemon/: Cargo.toml
daemon/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
daemon/src/audio/: mod.rs  resample.rs  wav.rs
daemon/src/cache/: tracks.rs
daemon/src/generation/: mod.rs  pipeline.rs  progress.rs
daemon/src/models/: audio_codec.rs  backend.rs  decoder.rs  device.rs  downloader.rs  loader.rs  logits.rs  mod.rs  text_encoder.rs
daemon/src/models/ace_step/: decoder.rs  generate.rs  guidance.rs  latent.rs  mod.rs  models.rs  scheduler.rs  text_encoder.rs  transformer.rs  vocoder.rs
daemon/src/models/musicgen/: mod.rs  models.rs  text_encoder.rs
daemon/src/rpc/: methods.rs  server.rs  types.rs
daemon/src/types/: config.rs  job.rs  mod.rs  track.rs
docs/: design.md
docs/features/: ace-step.md  ai-generation.md  audio-continuation.md  audio-playback.md  cache-management.md  daemon-lifecycle.md  health-check.md  implementation-order.md  playlist-queue.md  plugin-setup.md  prefetch.md  procedural-generation.md  progress-notifications.md  statusline.md  telescope.md
lua/lofi/: init.lua
specs/001-musicgen-onnx/: tasks.md
specs/002-ace-step/: plan.md  research.md  tasks.md
specs/002-ace-step/contracts/: jsonrpc.md
