[package]
name = "lofi-daemon"
version = "0.1.0"
edition = "2021"
description = "AI music generation daemon using MusicGen ONNX"
license = "MIT"

[dependencies]
# ONNX Runtime for model inference
ort = { version = "2.0.0-rc.9", features = ["half", "ndarray"] }

# Tensor operations
ndarray = "0.16.1"

# Text tokenization
tokenizers = "0.19.1"

# Float16 support for fp16 models
half = "2.4.1"

# WAV file encoding
hound = "3.5.1"

# HTTP client for model downloads
reqwest = { version = "0.12", features = ["blocking", "stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON serialization for JSON-RPC
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SHA256 for track ID generation
sha2 = "0.10"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

# Platform-specific directories for cache
directories = "5"

# Progress bars for downloads
indicatif = "0.17"
